--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
 # You don't need to test on very old versions of the Go compiler. It's the user's
 # responsibility to keep their compiler up to date.
 go:
-  - 1.12.x
+  - 1.12.4
 
 # Only clone the most recent commit.
 git:
@@ -20,7 +20,7 @@ git:
 
 # Skip the install step. Don't `go get` dependencies. Only build with the code
 # in vendor/
-install: true
+# install: true
 
 # Don't email me the results of the test runs.
 notifications:
@@ -29,12 +29,16 @@ notifications:
 # Anything in before_script that returns a nonzero exit code will flunk the
 # build and immediately stop. It's sorta like having set -e enabled in bash.
 # Make sure golangci-lint is vendored.
-# before_script:
-#  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+before_script:
+  - go get github.com/urfave/cli
+  - go get github.com/fatih/color
 
 # script always runs to completion (set +e). If we have linter issues AND a
 # failing test, we want to see both. Configure golangci-lint with a
 # .golangci.yml file at the top level of your repo.
-# script:
-#  - golangci-lint run       # run a bunch of code checkers/linters in parallel
-#  - go test -v -race ./...  # Run all the tests with the race detector enabled
+script:
+  - go clean ./
+  - go build ./
+  - ./adr init /tmp
+  - ./adr new test 0 0 1
+  - cat /tmp/1-test-0-0-1.md
