--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: 1.16
 
     - name: Build
+      env:
+        CGO_ENABLED: 0
       run: go build -v ./...
-
