--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - GO111MODULE=on
 
 # You don't need to test on very old versions of the Go compiler. It's the user's
-# responsibility to keep their compiler up to date.
+# responsibility to keep their compiler up to date. Test on 1.16
 go:
   - 1.16.4
 
