Fix: Correct Go build commands in manual release workflow (#13)
The previous build commands in the manual release workflow were attempting
to build only the main.go file (e.g., `go build -o adr-linux-amd64 main.go`).
This caused "undefined" errors because other .go files in the package
(like commands.go and flags.go) were not being included in the build.

This commit changes the build commands to use `go build -o <output_name> .`
which correctly builds all .go files in the current directory as part
of the main package.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -24,13 +24,13 @@ jobs:
           go-version: '1.22.x'
 
       - name: Build for Linux (amd64)
-        run: GOOS=linux GOARCH=amd64 go build -o adr-linux-amd64 main.go
+        run: GOOS=linux GOARCH=amd64 go build -o adr-linux-amd64 .
 
       - name: Build for macOS (amd64)
-        run: GOOS=darwin GOARCH=amd64 go build -o adr-macos-amd64 main.go
+        run: GOOS=darwin GOARCH=amd64 go build -o adr-macos-amd64 .
 
       - name: Build for Windows (amd64)
-        run: GOOS=windows GOARCH=amd64 go build -o adr-windows-amd64.exe main.go
+        run: GOOS=windows GOARCH=amd64 go build -o adr-windows-amd64.exe .
 
       - name: Create GitHub Release
         id: create_release
